---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: ????
  Bugfixes:
    - Steel plate technology now correctly requires the coal coke and automation science pack technologies.
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2023-11-09
  Changes:
    - Fixed a small bug where electronics research unlocked the circuit recipe twice.
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2023-11-09
  Changes:
    - Split off burner phase as its own mod.
---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: 2023-11-07
  Changes:
    - Soul-Burn's Janky Quality support.
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 2023-11-07
  Changes:
    - Added a remote call for other mods to make their burner or heat-powered entities sped up by the mod. Simply add remote.call("speedup-burners", "addBurner", "entity-name") (or the same but with "addHeater" instead of burner) in on_init and on_configuration_changed.
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2023-11-06
  Changes:
    - Text plates compatibility patch
    - New menu simulation
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2023-11-05
  Balancing:
    - Made automation science a bit more expensive, because it was too much cheaper than logistic science
  Bugfixes:
    - Fixed a few localization issues
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2023-11-05
  Bugfixes:
    - Fixed long inserters trying to put items in invisible beacons