@@ -3,6 +3,11 @@ Version: 0.3.2
 Date: ????
   Bugfixes:
     - Steel plate technology now correctly requires the coal coke and automation science pack technologies.
+  Balancing:
+    - Automation science pack now requires 2 glass, instead of 3
+    - Increased the crafting speeed of sand by 50%
+    - Furnaces now require the previous tier of furnace to craft
+    - Waste water purification is now more useful to do (rather than just throwing out the water)
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.1
 Date: 2023-11-09
